# DynoMP

./: .gitignore  .gitmodules  LICENSE  README.md  ants-vprec.Dockerfile  debug-docker.sh  debug.Dockerfile  debug.sh  pyproject.toml  viz-ants.ipynb  viz-pytorch.ipynb  viz.ipynb
code/: env.sh  experiments.sh  mnist_train.py  setup.sh  utils.py  voxelmorph_train.py
containers/: ants-vprec.Dockerfile  fuzzy-pytorch.Dockerfile  miccai2026.Dockerfile  vprec-pytorch-exclude.txt
models/: 2d-amp.pt  2d-amp_best.pt  2d-bf16.pt  2d-bf16_best.pt  2d-default.pt  2d-default_best.pt  2d-default_default-int_epoch100.pt  2d-dynomp.pt  2d-dynomp_best.pt  2d-dynomp_default-int_epoch100.pt  2d-fp16.pt  2d-fp16_default-int_epoch100.pt  3d-amp.pt  3d-amp_best.pt  3d-amp_default-int_epoch10.pt  3d-amp_default-int_epoch20.pt  3d-amp_default-int_epoch30.pt  3d-amp_default-int_epoch40.pt  3d-amp_default-int_epoch50.pt  3d-amp_default-int_epoch60.pt  3d-amp_default-int_epoch70.pt  3d-bf16.pt  3d-bf16_best.pt  3d-bf16_default-int_epoch10.pt  3d-bf16_default-int_epoch20.pt  3d-bf16_default-int_epoch30.pt  3d-bf16_default-int_epoch40.pt  3d-bf16_default-int_epoch50.pt  3d-bf16_default-int_epoch60.pt  3d-bf16_default-int_epoch70.pt  3d-bf16_default-int_epoch80.pt  3d-default.pt  3d-default_best.pt  3d-default_default-int_epoch10.pt  3d-default_default-int_epoch100.pt  3d-default_default-int_epoch20.pt  3d-default_default-int_epoch30.pt  3d-default_default-int_epoch40.pt  3d-default_default-int_epoch50.pt  3d-default_default-int_epoch60.pt  (+28 more)
paper-old/: .gitignore  paper.bib  paper.tex
(+172 files in other folders)
